--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,5 +1,4 @@
-FROM hub.c.163.com/nce2/nodejs:0.12.2 
-COPY . /srv/www
-WORKDIR /srv/www
-RUN cnpm install -d
-CMD ["node", "app.js"]
+FROM hub.c.163.com/z553992453/nodejs:6.11.0
+MAINTAINER zb
+WORKDIR /root/nodeserver/nodejs
+ENTRYPOINT ["/usr/local/bin/node", "app.js"]
